commit 2 for spidpay

--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -126,7 +126,6 @@
 
 
                 <RelativeLayout
-
                     android:id="@+id/relative_store"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -164,7 +163,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/relative_history"
+                    android:id="@+id/relative_notification"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
