--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="approval_text_color">#777071</color>
+    <color name="approval_bg">#F8F6F6</color>
     <color name="white">#FFFFFFFF</color>
     <color name="unselecttabcolor">#B3EDD2</color>
     <color name="botton_nav_inactive_color">#4E4E4E</color>
