--- a/app/src/main/res/layout/landingfragment.xml
+++ b/app/src/main/res/layout/landingfragment.xml
@@ -217,6 +217,7 @@
                         android:layout_weight="1">
 
                         <RelativeLayout
+                            android:id="@+id/relative_aeps"
                             android:layout_width="@dimen/marign100dp"
                             android:layout_height="@dimen/marign100dp"
                             android:layout_centerInParent="true"
