--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,6 +43,39 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_welcomebase" />
 
+        <LinearLayout
+            android:id="@+id/linear_intrested_for"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marign20dp"
+            android:layout_marginTop="@dimen/marign15dp"
+            android:layout_marginEnd="@dimen/marign20dp"
+            android:layout_marginBottom="@dimen/marign20dp"
+            android:background="@drawable/edittext_shadow"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/tv_signup_txt">
+
+            <EditText
+                android:id="@+id/edt_register_intrested_for"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:cursorVisible="false"
+                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
+                android:focusable="false"
+                android:hint="@string/inrestedfor"
+                android:inputType="text"
+                android:maxLength="10"
+                android:paddingLeft="@dimen/marign10dp"
+                android:paddingTop="@dimen/marign10dp"
+                android:paddingRight="@dimen/marign10dp"
+                android:paddingBottom="@dimen/marign10dp"
+                android:textColorHint="@color/lightgrey" />
+
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/linear_signup_fullname"
@@ -54,7 +87,7 @@
             android:layout_marginBottom="@dimen/marign20dp"
             android:background="@drawable/edittext_shadow"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/tv_signup_txt">
+            app:layout_constraintTop_toBottomOf="@+id/linear_intrested_for">
 
             <EditText
                 android:id="@+id/edt_registerfullname"
@@ -164,7 +197,6 @@
 
 
         <Button
-            android:onClick="@{(v)->register_viewmodel.validate_signupView(v)}"
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -174,6 +206,7 @@
             android:layout_marginBottom="@dimen/marign20dp"
             android:background="@drawable/button_bg_green"
             android:fontFamily="@font/lato"
+            android:onClick="@{(v)->register_viewmodel.validate_signupView(v)}"
             android:text="@string/register"
             android:textColor="@color/white"
             android:textSize="@dimen/marign18sp"
@@ -215,6 +248,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+
+
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/pb_login"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
